frontend/src/web/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Chewy&family=Knewave&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap");
@import "./normalization.css";

:root {
  --transition-options: 250ms ease-in-out;

  --exploding-kittens: #b81c27;
  --exploding-kittens-hover: #90161f;
  --throw-throw-burrito: #f19826;
  --zombie-kittens: #acbe5a;
  --off-white: #fcf8ee;
  --soft-black: #0f0f0f99;
  --throw-throw-burrito-hover: #b96e18;
  --zombie-kittens-hover: #748239;
  --modal-window-background: #5b1015;
  --black: #1f1f1f;
  --black-rgb: 0, 0, 0;
  --shadow: #00000040;
  --off-white-rgb: 252, 248, 238;
  --exploding-kittens-transparent: #acbe5a4d;
}

html,
body {
  min-height: 100vh;
}

body {
  display: flex;
  flex-direction: column;
}

#root {
  display: flex;
  flex-direction: column;

  flex: 1;
}

main {
  display: flex;
  flex-direction: column;

  flex: 1;
}

input,
textarea,
button {
  transition: all var(--transition-options);
}

input:focus-visible {
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Knewave", sans-serif;
}

body {
  font-family: "Chewy", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 16px;

  line-height: 1.5;
  letter-spacing: -0.02em;

  color: var(--off-white);

  background-color: var(--throw-throw-burrito);
  background-image: url("/src/web/assets/images/background/background-mobile.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

@media only screen and (min-width: 768px) {
  body {
    background-image: url("/src/web/assets/images/background/background-tablet.png");
  }
}

@media only screen and (min-width: 1440px) {
  body {
    background-image: url("/src/web/assets/images/background/background-laptop.png");
  }
}

@media only screen and (min-width: 1920px) {
  body {
    background-image: url("/src/web/assets/images/background/background-desktop.png");
  }
}

/* Scroll bar styles */

body {
  --sb-track-color: var(--exploding-kittens);
  --sb-thumb-color: var(--off-white);
  --sb-size: 8px;
}

body::-webkit-scrollbar {
  width: var(--sb-size);
}

body::-webkit-scrollbar-track {
  background: var(--sb-track-color);
  border-radius: 6px;
}

body::-webkit-scrollbar-thumb {
  background: var(--sb-thumb-color);
  border-radius: 6px;
}

@supports not selector(::-webkit-scrollbar) {
  body {
    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
  }
}

/* Hidden elements for SEO */

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

